--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>玄灵鲸跃</title>
+	<title>走过大荒</title>
 	<link rel="stylesheet" href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/Buttons/2.0.0/css/buttons.css">
 	<link rel="stylesheet" href="css/app.css" type="text/css" media="all">
 	<link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-y/font-awesome/4.2.0/css/font-awesome.min.css"
@@ -86,11 +86,6 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul id="menu-primary" class="nav navbar-nav navbar-right">
@@ -107,7 +102,7 @@
 					<img src="https://img.picui.cn/free/2025/04/20/6805142ccaab0.jpg" alt="PatternFly logo" id="qq"
 						class="wow fadeInDown animated" style="visibility:visible;animation-name:fadeInDown">
 					<h1 class="wow fadeIn animated" data-wow-delay="750ms"
-						style="visibility:visible;animation-delay:750ms;animation-name:fadeIn;border-bottom:none">玄灵鲸跃
+						style="visibility:visible;animation-delay:750ms;animation-name:fadeIn;border-bottom:none">走过大荒
 					</h1>
 					<p class="description wow fadeIn animated" data-wow-delay="1250ms"
 						style="background:rgba(0, 0, 0, 0.5);visibility:visible;animation-delay:1250ms;animation-name:fadeIn;border-radius:10px;padding:10px;">
