--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 	</div>
 	<script src="js/hoverTreeWelcome.js"></script>
 	<script src="js/backgroundWindow.js"></script>
+	<audio autoplay>
+		<source src="https://api.ilingku.com/int/v1/rand_netease?sort=%E7%83%AD%E6%AD%8C%E6%A6%9C&format=url" type="audio/mpeg">
+	</audio>
 </body>
 
 </html>
