--- a/index.html
+++ b/index.html
@@ -65,16 +65,41 @@
 		#qq:hover {
 			box-shadow: 0 0 10px #fff;
 			-webkit-box-shadow: 0 0 19px #fff;
-			transform: rotate(360deg);
-			-ms-transform: rotate(360deg);
-			-moz-transform: rotate(360deg);
 			-webkit-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-ms-transform: rotate(360deg);
 			-o-transform: rotate(360deg);
+			transform: rotate(360deg);
 			filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3)
 		}
 	</style>
 	<script type="text/javascript">
-		function click(e) { document.all && (2 == event.button || 3 == event.button) && (alert("欢迎光临！这是首页"), oncontextmenu = "return false"), document.layers && 3 == e.which && (oncontextmenu = "return false") } document.layers && document.captureEvents(Event.MOUSEDOWN), document.onmousedown = click, document.oncontextmenu = new Function("return false;"), document.onkeydown = document.onkeyup = document.onkeypress = function () { return 123 == window.event.keyCode ? (window.event.returnValue = !1, !1) : void 0 };
+		function click(e) {
+			// 检测是否为IE浏览器并判断鼠标右键或中键点击
+			if (document.all && (event.button === 2 || event.button === 3)) {
+				alert("欢迎光临！这是首页");
+				oncontextmenu = "return false";
+			}
+			// 检测Netscape浏览器并判断右键点击
+			if (document.layers && e.which === 3) {
+				oncontextmenu = "return false";
+			}
+		}
+
+		// 事件监听设置
+		if (document.layers) {
+			document.captureEvents(Event.MOUSEDOWN);
+		}
+		document.onmousedown = click;
+		document.oncontextmenu = new Function("return false;");
+
+		// 键盘事件处理（阻止F12开发者工具）
+		document.onkeydown = document.onkeyup = document.onkeypress = function () {
+			if (window.event.keyCode === 123) { // 123是F12的keyCode
+				window.event.returnValue = false;
+				return false;
+			}
+		};
 	</script>
 </head>
 
@@ -82,19 +107,6 @@
 	class="home page page-id-194 page-template page-template-page-homepage page-template-page-homepage-php custom-background"
 	ondragstart="window.event.returnValue=!1" oncontextmenu="window.event.returnValue=!1"
 	onselectstart="event.returnValue=!1">
-	<header role="banner">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-				</div>
-				<div class="navbar-collapse collapse">
-					<ul id="menu-primary" class="nav navbar-nav navbar-right">
-
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
 	<div class="jumbotron">
 		<div class="container">
 			<div class="splash">
@@ -151,7 +163,8 @@
 	<script src="js/hoverTreeWelcome.js"></script>
 	<script src="js/backgroundWindow.js"></script>
 	<audio autoplay>
-		<source src="https://api.ilingku.com/int/v1/rand_netease?sort=%E7%83%AD%E6%AD%8C%E6%A6%9C&format=url" type="audio/mpeg">
+		<source src="https://api.ilingku.com/int/v1/rand_netease?sort=%E7%83%AD%E6%AD%8C%E6%A6%9C&format=url"
+			type="audio/mpeg">
 	</audio>
 </body>
 
