--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	<script src="js/hoverTreeWelcome.js"></script>
 	<script src="js/backgroundWindow.js"></script>
 	<audio autoplay>
-		<source src="https://api.ilingku.com/int/v1/rand_netease?sort=%E7%83%AD%E6%AD%8C%E6%A6%9C&format=url"
+		<source src="audio/苟活.mp3"
 			type="audio/mpeg">
 	</audio>
 </body>
